--- a/test/test.vcxproj
+++ b/test/test.vcxproj
@@ -19,7 +19,7 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\..\..\..\..\Documents\Visual Studio 2017\Libs\lists\lists\lists.vcxproj">
+    <ProjectReference Include="..\..\lists\lists\lists.vcxproj">
       <Project>{74fbace0-d1db-4667-b139-62572188af03}</Project>
     </ProjectReference>
     <ProjectReference Include="..\spymem\spymem.vcxproj">
@@ -103,13 +103,13 @@
       <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <CompileAs>CompileAsC</CompileAs>
-      <AdditionalIncludeDirectories>C:\Users\CodeDragon\Desktop\workspace\C\Libs\spymem\spymem;C:\Users\CodeDragon\Documents\Visual Studio 2017\Libs\lists\lists;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>C:\Users\CodeDragon\Desktop\workspace\C\Libs\spymem\spymem;C:\Users\CodeDragon\Desktop\workspace\C\Libs\lists\lists;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <AdditionalOptions>/DDEBUG %(AdditionalOptions)</AdditionalOptions>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>C:\Users\CodeDragon\Desktop\workspace\C\Libs\spymem\spymem;C:\Users\CodeDragon\Documents\Visual Studio 2017\Libs\lists\lists;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>C:\Users\CodeDragon\Desktop\workspace\C\Libs\spymem\spymem;C:\Users\CodeDragon\Desktop\workspace\C\Libs\lists\lists;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
@@ -122,13 +122,13 @@
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <CompileAs>CompileAsC</CompileAs>
-      <AdditionalIncludeDirectories>C:\Users\CodeDragon\Desktop\workspace\C\Libs\spymem\spymem;C:\Users\CodeDragon\Documents\Visual Studio 2017\Libs\lists\lists;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>C:\Users\CodeDragon\Desktop\workspace\C\Libs\spymem\spymem;C:\Users\CodeDragon\Desktop\workspace\C\Libs\lists\lists;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <AdditionalOptions>/DDEBUG %(AdditionalOptions)</AdditionalOptions>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>C:\Users\CodeDragon\Desktop\workspace\C\Libs\spymem\spymem;C:\Users\CodeDragon\Documents\Visual Studio 2017\Libs\lists\lists;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>C:\Users\CodeDragon\Desktop\workspace\C\Libs\spymem\spymem;C:\Users\CodeDragon\Desktop\workspace\C\Libs\lists\lists;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -143,7 +143,7 @@
       <PreprocessorDefinitions>WIN32;NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <CompileAs>CompileAsC</CompileAs>
-      <AdditionalIncludeDirectories>C:\Users\CodeDragon\Desktop\workspace\C\Libs\spymem\spymem;C:\Users\CodeDragon\Documents\Visual Studio 2017\Libs\lists\lists;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>C:\Users\CodeDragon\Desktop\workspace\C\Libs\spymem\spymem;C:\Users\CodeDragon\Desktop\workspace\C\Libs\lists\lists;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <AdditionalOptions>/DDEBUG %(AdditionalOptions)</AdditionalOptions>
     </ClCompile>
     <Link>
@@ -151,7 +151,7 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>C:\Users\CodeDragon\Desktop\workspace\C\Libs\spymem\spymem;C:\Users\CodeDragon\Documents\Visual Studio 2017\Libs\lists\lists;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>C:\Users\CodeDragon\Desktop\workspace\C\Libs\spymem\spymem;C:\Users\CodeDragon\Desktop\workspace\C\Libs\lists\lists;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -166,7 +166,7 @@
       <PreprocessorDefinitions>NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <CompileAs>CompileAsC</CompileAs>
-      <AdditionalIncludeDirectories>C:\Users\CodeDragon\Desktop\workspace\C\Libs\spymem\spymem;C:\Users\CodeDragon\Documents\Visual Studio 2017\Libs\lists\lists;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>C:\Users\CodeDragon\Desktop\workspace\C\Libs\spymem\spymem;C:\Users\CodeDragon\Desktop\workspace\C\Libs\lists\lists;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <AdditionalOptions>/DDEBUG %(AdditionalOptions)</AdditionalOptions>
     </ClCompile>
     <Link>
@@ -174,7 +174,7 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>C:\Users\CodeDragon\Desktop\workspace\C\Libs\spymem\spymem;C:\Users\CodeDragon\Documents\Visual Studio 2017\Libs\lists\lists;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>C:\Users\CodeDragon\Desktop\workspace\C\Libs\spymem\spymem;C:\Users\CodeDragon\Desktop\workspace\C\Libs\lists\lists;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
